@@ -4,6 +4,7 @@ package kr.warin.user.adapter.out;
 import jakarta.persistence.Id;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
 import java.util.Collections;
@@ -11,9 +12,17 @@ import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+@Getter
 @RequiredArgsConstructor
+@Slf4j
 public enum Role {
-    USER(Collections.emptySet()),
+    GUEST(Collections.emptySet()),
+    USER(Set.of(
+            Permission.USER_CREATE,
+            Permission.USER_DELETE,
+            Permission.USER_UPDATE,
+            Permission.USER_READ
+    )),
     ADMIN(
             Set.of(Permission.ADMIN_DELETE,
                     Permission.ADMIN_UPDATE,
@@ -22,14 +31,13 @@ public enum Role {
             )
     );
 
-    @Getter
     private final Set<Permission> permissions;
 
     public List<SimpleGrantedAuthority> getAuthorities() {
-        List<SimpleGrantedAuthority> authorities = getPermissions()
+        List<SimpleGrantedAuthority> authorities = new java.util.ArrayList<>(getPermissions()
                 .stream()
                 .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
-                .toList();
+                .toList());
         authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
         return authorities;
     }
